<resources>
    <string name="app_name">MQTT Communication</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="server_uri">Enter Server URI</string>
    <string name="client_id">Enter Client ID</string>
    <string name="user_name_optional">Enter User Name (Optional)</string>
    <string name="enter_password_optional">Enter Password (Optional)</string>
    <string name="clear">Clear</string>
    <string name="connect">Connect</string>
    <string name="connect_to_broker">Connect to MQTT Broker:</string>
    <string name="topic">Enter Topic</string>
    <string name="message">Enter Message/Payload</string>
    <string name="publish">Publish</string>
    <string name="disconnect">Disconnect</string>
    <string name="publish_message_to_mqtt_broker">Publish message to MQTT Topic:</string>
    <string name="subscribe_to_mqtt_broker">Subscribe/Unsubscribe to MQTT Topic:</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="qos_level">Select QoS Level</string>
    <string name="retain_flag">Select Retain Flag</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="server_uri_to_be_entered">Server URI to be entered:</string>
    <string name="generate">Generate</string>
    <string name="generate_client_id">Generate Client ID:</string>
</resources>