<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutParent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp_16"
        tools:context=".view.fragment.ClientFragment">

        <TextView
            android:id="@+id/tvPublishHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publish_message_to_mqtt_broker"
            style="@style/TextView.Header.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTvPublishTopic"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_0"
            app:layout_constraintHeight_percent="0.08"
            app:startIconDrawable="@drawable/ic_topic"
            app:startIconTint="@color/red_500"
            android:textColorHint="@color/red_200"
            android:hint="@string/topic"
            android:layout_marginTop="@dimen/dp_8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPublishHeader"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTvPublishMessage"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_0"
            app:layout_constraintHeight_percent="0.08"
            app:startIconDrawable="@drawable/ic_message"
            app:startIconTint="@color/red_500"
            android:textColorHint="@color/red_200"
            android:hint="@string/message"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTvPublishTopic"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvQosLevelSubHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qos_level"
            style="@style/TextView.Header.Large"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTvPublishMessage" />

        <com.google.android.material.slider.Slider
            android:id="@+id/sliderPublishQosLevel"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_0"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintHeight_percent="0.07"
            android:stepSize="1.0"
            android:valueFrom="0"
            android:valueTo="2"
            android:value="1"
            app:trackColorActive="@color/red_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvQosLevelSubHeader"/>

        <TextView
            android:id="@+id/tvRetainFlagSubHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retain_flag"
            style="@style/TextView.Header.Large"
            android:layout_marginTop="@dimen/dp_8"
            app:layout_constraintStart_toStartOf="@id/toggleGroupRetainFlag"
            app:layout_constraintTop_toBottomOf="@id/editTvPublishMessage" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleGroupRetainFlag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:checkedButton="@id/buttonDisable"
            app:singleSelection="true"
            app:selectionRequired="true"
            app:layout_constraintTop_toBottomOf="@id/tvRetainFlagSubHeader"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/buttonEnable"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="0.2"
                android:text="@string/enable" />

            <Button
                android:id="@+id/buttonDisable"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disable" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPublish"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.5"

            android:text="@string/publish"
            android:paddingStart="@dimen/dp_32"
            android:paddingEnd="@dimen/dp_32"
            android:paddingTop="@dimen/dp_8"
            android:paddingBottom="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:textSize="@dimen/sp_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sliderPublishQosLevel"
            app:icon="@drawable/ic_publish"
            style="@style/Widget.MaterialComponents.Button.Icon"/>

        <TextView
            android:id="@+id/tvSubscribeHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subscribe_to_mqtt_broker"
            style="@style/TextView.Header.Large"
            android:layout_marginTop="@dimen/dp_72"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonPublish" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTvSubscribeTopic"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_0"
            app:layout_constraintHeight_percent="0.08"
            app:startIconDrawable="@drawable/ic_topic"
            app:startIconTint="@color/red_500"
            android:textColorHint="@color/red_200"
            android:hint="@string/topic"
            android:layout_marginTop="@dimen/dp_8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSubscribeHeader"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvQosLevelSubHeader1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qos_level"
            style="@style/TextView.Header.Large"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            app:layout_constraintStart_toStartOf="@id/sliderSubscribeQosLevel"
            app:layout_constraintTop_toBottomOf="@id/editTvSubscribeTopic" />

        <com.google.android.material.slider.Slider
            android:id="@+id/sliderSubscribeQosLevel"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_0"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintHeight_percent="0.07"
            android:stepSize="1.0"
            android:valueFrom="0"
            android:valueTo="2"
            android:value="1"
            app:trackColorActive="@color/red_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvQosLevelSubHeader1"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSubscribe"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.45"

            android:text="@string/subscribe"
            android:padding="@dimen/dp_8"
            android:textSize="@dimen/sp_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonUnSubscribe"
            app:layout_constraintTop_toBottomOf="@id/sliderSubscribeQosLevel"
            app:icon="@drawable/ic_subscribe"
            style="@style/Widget.MaterialComponents.Button.Icon"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonUnSubscribe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/unsubscribe"
            android:paddingTop="@dimen/dp_8"
            android:paddingBottom="@dimen/dp_8"
            android:textSize="@dimen/sp_16"
            app:layout_constraintStart_toEndOf="@id/buttonSubscribe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sliderSubscribeQosLevel"
            app:icon="@drawable/ic_unsubscribe"
            style="@style/Widget.MaterialComponents.Button.Icon"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDisconnect"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.5"

            android:text="@string/disconnect"
            android:layout_marginBottom="@dimen/dp_8"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_16"
            android:paddingTop="@dimen/dp_8"
            android:paddingBottom="@dimen/dp_8"
            android:textSize="@dimen/sp_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:icon="@drawable/ic_disconnect"
            style="@style/Widget.MaterialComponents.Button.Icon"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>