<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp_16"
        tools:context=".view.fragment.ConnectFragment">

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_to_broker"
            style="@style/TextView.Header.XLarge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTvServerUri"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_0"
            app:layout_constraintHeight_percent="0.08"
            app:startIconDrawable="@drawable/ic_server"
            app:startIconTint="@color/purple_500"
            android:textColorHint="@color/purple_200"
            android:hint="@string/server_uri"
            android:layout_marginTop="@dimen/dp_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHeader"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTvClientId"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_0"
            app:layout_constraintHeight_percent="0.08"
            app:startIconDrawable="@drawable/ic_client_id"
            app:startIconTint="@color/purple_500"
            android:textColorHint="@color/purple_200"
            android:hint="@string/client_id"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTvServerUri"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTvUsername"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_0"
            app:layout_constraintHeight_percent="0.08"
            app:startIconDrawable="@drawable/ic_user"
            app:startIconTint="@color/purple_500"
            android:textColorHint="@color/purple_200"
            android:hint="@string/user_name_optional"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTvClientId"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTvPassword"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_0"
            app:layout_constraintHeight_percent="0.08"
            app:startIconDrawable="@drawable/ic_password"
            app:startIconTint="@color/purple_500"
            android:textColorHint="@color/purple_200"
            android:hint="@string/enter_password_optional"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTvUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonClearConnect"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.5"

            android:text="@string/connect"
            android:textStyle="bold"
            android:paddingStart="@dimen/dp_32"
            android:paddingEnd="@dimen/dp_32"
            android:paddingTop="@dimen/dp_8"
            android:paddingBottom="@dimen/dp_8"
            android:textSize="@dimen/sp_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/buttonClearTextFields"
            app:icon="@drawable/ic_connect"
            style="@style/Widget.MaterialComponents.Button.Icon"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonClearTextFields"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.5"

            android:text="@string/clear"
            android:textStyle="bold"
            android:paddingStart="@dimen/dp_32"
            android:paddingEnd="@dimen/dp_32"
            android:paddingTop="@dimen/dp_8"
            android:paddingBottom="@dimen/dp_8"
            android:textSize="@dimen/sp_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:icon="@drawable/ic_clear"
            style="@style/Widget.MaterialComponents.Button.Icon"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>